prometheus-operator/grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - grafana.london.pez.sh
  - grafana.paris.pez.sh
  - grafana.copenhagen.pez.sh
  gateways:
  - istio-system/london-pez-sh
  - istio-system/paris-pez-sh
  - istio-system/copenhagen-pez-sh
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
