prometheus-operator/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - prometheus.london.pez.sh
  - prometheus.copenhagen.pez.sh
  gateways:
  - istio-system/london-pez-sh
  - istio-system/copenhagen-pez-sh
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
